# Goctopus

./: .dockerignore  .golangci.yml  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  goctopus.yaml  goctopus.yaml.example
.github/workflows/: ci.yml  docker-image.yml
clients/: README.md
clients/go/: go.mod  goctopus.go
clients/javascript/: goctopus.d.ts  goctopus.js  package.json
clients/python/: goctopus_client.py  pyproject.toml
src/: authorization.go  bench_test.go  client.go  config.go  config_test.go  const.go  delete_test.go  dummy_authorizer.go  engine.go  engine_test.go  fuzz_test.go  goctopus.go  helpers_test.go  history.go  history_test.go  main.go  main_test.go  memory_storage.go  memory_storage_test.go  message.go  message_test.go  metrics.go  metrics_test.go  proxy_authorizer.go  proxy_authorizer_test.go  ratelimit.go  ratelimit_test.go  redis_storage.go  redis_storage_test.go  server.go  server_test.go  settings.go  storage.go  topics.go  version.go  ws_test.go
