[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "goctopus-client"
version = "0.1.0"
description = "Asyncio client for the Goctopus websocket gateway (ACK, de-duplication, reconnect)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["websockets>=11"]
keywords = ["websocket", "goctopus", "push", "realtime"]

[project.urls]
Homepage = "https://github.com/andreyvolobuev/Goctopus"

[tool.setuptools]
py-modules = ["goctopus_client"]
